dev(narugo): use hf-based download

--- a/.github/workflows/release_test.yml
+++ b/.github/workflows/release_test.yml
@@ -119,6 +119,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r requirements-build.txt
+          pip install -r requirements-transfer.txt
       - name: Test the basic environment
         shell: bash
         run: |
