--- a/.github/workflows/release_test.yml
+++ b/.github/workflows/release_test.yml
@@ -120,6 +120,7 @@ jobs:
           pip install -r requirements.txt
           pip install -r requirements-build.txt
           pip install -r requirements-transfer.txt
+          pip install -r requirements-7z.txt
       - name: Test the basic environment
         shell: bash
         run: |
