--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,6 +87,8 @@ jobs:
           pip install --upgrade flake8 setuptools wheel twine
           pip install -r requirements.txt
           pip install -r requirements-test.txt
+          pip install -r requirements-transfer.txt
+          pip install -r requirements-7z.txt
       - name: Test the basic environment
         shell: bash
         run: |
