--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,15 +67,19 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y tree cloc wget curl make zip
           sudo apt-get install -y git-lfs
+          sudo apt-get install p7zip-full rar unrar
       - name: Set up system dependences on Windows
         if: ${{ env.OS_NAME == 'Windows' }}
         shell: bash
         run: |
           choco install tree cloc wget curl make zip
+          choco install 7zip winrar unrar
       - name: Set up system dependences on MacOS
         if: ${{ env.OS_NAME == 'MacOS' }}
         run: |
           brew install tree cloc wget curl make zip
+          brew install sevenzip
+          brew install --cask rar
       - name: Set up python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
