dev(narugo): more dep on github action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,8 +73,7 @@ jobs:
         shell: bash
         run: |
           choco install tree cloc wget curl make zip
-#          choco install 7zip winrar unrar
-          choco install 7zip winrar
+          choco install 7zip winrar  # unrar should be added
       - name: Set up system dependences on MacOS
         if: ${{ env.OS_NAME == 'MacOS' }}
         run: |
