--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -46,6 +46,7 @@ jobs:
           python -m pip install -r requirements-doc.txt
           python -m pip install -r requirements-transfer.txt
           python -m pip install -r requirements-7z.txt
+          python -m pip install -r requirements-rar.txt
       - name: Sync from ref
         if: ${{ github.event_name == 'push' }}
         run: |
