--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,6 +93,7 @@ jobs:
           pip install -r requirements-test.txt
           pip install -r requirements-transfer.txt
           pip install -r requirements-7z.txt
+          pip install -r requirements-rar.txt
       - name: Test the basic environment
         shell: bash
         run: |
@@ -196,6 +197,7 @@ jobs:
           pip install -r requirements-build.txt
           pip install -r requirements-transfer.txt
           pip install -r requirements-7z.txt
+          pip install -r requirements-rar.txt
       - name: Test the basic environment
         shell: bash
         run: |
