--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -174,6 +174,19 @@ jobs:
           ls -al dist
           dist/hfutils -v
           dist/hfutils -h
+      - name: Check Whoami
+        shell: bash
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: |
+          dist/hfutils whoami
+      - name: Check Downloading
+        shell: bash
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: |
+          dist/hfutils download -r deepghs/konachan_index -d . -o konachan_index
+          tree konachan_index
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
