--- a/.github/workflows/release_test.yml
+++ b/.github/workflows/release_test.yml
@@ -168,6 +168,19 @@ jobs:
           ls -al dist
           dist/hfutils -v
           dist/hfutils -h
+      - name: Check Whoami
+        shell: bash
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: |
+          dist/hfutils whoami
+      - name: Check Downloading
+        shell: bash
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: |
+          dist/hfutils download -r deepghs/konachan_index -d . -o konachan_index
+          tree konachan_index
       - name: Upload packed files to artifacts
         uses: actions/upload-artifact@v3
         with:
