--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -180,13 +180,14 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           dist/hfutils whoami
+          dist/hfutils whoami | grep narugo1992
       - name: Check Downloading
         shell: bash
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           dist/hfutils download -r deepghs/konachan_index -d . -o konachan_index
-          tree konachan_index
+          ls -al konachan_index
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
