--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -251,13 +251,14 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           dist/hfutils whoami
+          dist/hfutils whoami | grep narugo1992
       - name: Check Downloading
         shell: bash
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           dist/hfutils download -r deepghs/konachan_index -d . -o konachan_index
-          tree konachan_index
+          ls -al konachan_index
       - uses: actions/upload-artifact@v3
         with:
           name: hfutils-v${{ env.PACKAGE_VERSION }}-${{ env.OS_NAME }}-${{ env.CPU_ARCH }}-${{ env.GIT_COMMIT_ID }}
