--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -259,6 +259,7 @@ jobs:
         run: |
           dist/hfutils download -r deepghs/konachan_index -d . -o konachan_index
           ls -al konachan_index
+          ls -al konachan_index | grep konachan.parquet
       - uses: actions/upload-artifact@v3
         with:
           name: hfutils-v${{ env.PACKAGE_VERSION }}-${{ env.OS_NAME }}-${{ env.CPU_ARCH }}-${{ env.GIT_COMMIT_ID }}
