--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ click>=7
 tzlocal
 natsort
 urlobject
-fsspec>=2024
+fsspec>=2024; python_version > '3.8'
+fsspec>=2024,<=2025.3.0; python_version <= '3.8'
 random_user_agent
