--- a/.github/workflows/badge.yml
+++ b/.github/workflows/badge.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.8 ]
+        python-version:
+          - '3.10'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.3.0
