--- a/.github/workflows/ir_repos.yml
+++ b/.github/workflows/ir_repos.yml
@@ -3,8 +3,8 @@ name: Irregular Repos
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 12 * * 0'
+#  schedule:
+#    - cron: '0 12 * * 0'
 
 jobs:
   check_irregular_repo:
